k8s/ingress/base/frontend-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: frontend-strip-gui
  namespace: frontend
spec:
  stripPrefix:
    prefixes:
      - /gui
