k8s/ingress/base/gateway-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: gateway-strip-backend-prefix
  namespace: apis
spec:
  stripPrefix:
    prefixes:
      - /backend
    forceSlash: false
